Fixed a fault that caused the year drop-down menu to jump around when a year is clicked (and not set the year).

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -345,7 +345,7 @@ div.calendar {
         position: relative;
 
         div.title-container {
-            display: inline;
+            display: inline-block;
             position: relative;
 
             span {
